--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,12 @@ body {
   --ff-sp: "Supreme", sans-serif;
   --ff-au: "Author", sans-serif;
 }
-
+/* .ot-bl {
+  outline: 2px solid blue;
+} */
+.ot-red {
+  outline: 2px solid red;
+}
 /* 
 .outline-red {
   outline: 2px solid red;
@@ -31,7 +36,9 @@ body {
 /* section {
   height: 100vh;
 } */
-
+.bg-yellow {
+  background-color: var(--yellow);
+}
 .border {
   border-bottom: solid black 5px;
   border-top: yellow;
@@ -78,7 +85,7 @@ body {
 
 .container {
   width: 100%;
-  height: 85vh;
+  min-height: 85vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -89,7 +96,8 @@ body {
 .carousel {
   width: 100%;
   height: 85%;
-  background: var(--yellow);
+  /* background: var(--yellow); */
+  background: #ffc700;
   direction: rtl;
   display: flex;
   justify-content: flex-start;
@@ -198,4 +206,9 @@ th {
 
 a {
   color: black;
+}
+
+.btn-select:active {
+  background-color: #fff;
+  color: #000000;
 }
